--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,15 @@ authors:
     roles: writing
     corresponding: false
 bibliography: references.bib
+csl: apa-5th-edition.csl
 ---
 
-## Section
-This is a simple placeholder for the manuscript's main document [@knuth84].
+## Kayla Sutton's Proposals
+Proposal #1: Ozone pollution associated with Fort Collins policies
+
+Proposal #2: Correlation between ozone pollution and elevation in Fort Collins
+
+## Miranda Chin's Proposals
+Proposal #1: Trends of invasive vegetation species populations within Colorado
+
+Proposal #2: Relationship between social vulnerability and economic status in families in the US
