--- a/index.qmd
+++ b/index.qmd
@@ -15,10 +15,26 @@ csl: apa-5th-edition.csl
 
 ## Kayla Sutton's Proposals
 Proposal #1: Ozone pollution associated with Fort Collins policies
+Justification: 
+Research objective:
+Proposed methods: 
+Expected outcomes: 
 
 Proposal #2: Correlation between ozone pollution and elevation in Fort Collins
+Justification: 
+Research objective:
+Proposed methods: 
+Expected outcomes: 
 
 ## Miranda Chin's Proposals
 Proposal #1: Trends of invasive vegetation species populations within Colorado
+Justification: 
+Research objective:
+Proposed methods: 
+Expected outcomes: 
 
 Proposal #2: Relationship between social vulnerability and economic status in families in the US
+Justification: 
+Research objective:
+Proposed methods: 
+Expected outcomes: 
