--- a/references.bib
+++ b/references.bib
@@ -16,4 +16,62 @@
   numpages = {15}
 }
 
+@article{stone2018aquatic,
+  title={Aquatic invasive species surveillance in the Little Colorado River Basin during 2017},
+  author={Stone, Dennis M and Young, Kirk L and Baumler, Chad E and Pillow, Michael J and Van Haverbeke, David and No, Interagency Acquisition},
+  journal={Prepared for US Geological Survey Grand Canyon Monitoring and Research Center, Flagstaff, Arizona (see Supplemental Material, References S2)},
+  year={2018}
+}
 
+@article{rahel2008managing,
+  title={Managing aquatic species of conservation concern in the face of climate change and invasive species},
+  author={Rahel, Frank J and Bierwagen, Britta and Taniguchi, Yoshinori},
+  journal={Conservation Biology},
+  volume={22},
+  number={3},
+  pages={551--561},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{chang2006ozone,
+  title={Ozone variations through vehicle emissions reductions based on air quality monitoring data in Taipei City, Taiwan, from 1994 to 2003},
+  author={Chang, Shuenn-Chin and Lee, Chung-Te},
+  journal={Atmospheric Environment},
+  volume={40},
+  number={19},
+  pages={3513--3526},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{lowi1990method,
+  title={A method for evaluating the atmospheric ozone impact of actual vehicle emissions},
+  author={Lowi Jr, Alvin and Carter, William PL},
+  journal={SAE transactions},
+  pages={303--311},
+  year={1990},
+  publisher={JSTOR}
+}
+
+@article{brodin2010seasonal,
+  title={Seasonal ozone behavior along an elevation gradient in the Colorado Front Range Mountains},
+  author={Brodin, Molly and Helmig, Detlev and Oltmans, Samuel},
+  journal={Atmospheric Environment},
+  volume={44},
+  number={39},
+  pages={5305--5315},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{aneja1992characterization,
+  title={Characterization of ozone at high elevation in the eastern United States: trends, seasonal variations, and exposure},
+  author={Aneja, Viney P and Li, Zheng},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={97},
+  number={D9},
+  pages={9873--9888},
+  year={1992},
+  publisher={Wiley Online Library}
+}
