--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ csl: apa-5th-edition.csl
 ---
 
 ## Kayla Sutton's Proposals
-Proposal #1: Ozone pollution associated with Fort Collins policies
+*Proposal #1:* Ozone pollution associated with Fort Collins policies
 
 Justification: Fort Collins has among the worst ozone levels in the country. High ozone levels are associated with increased asthma rates and respiratory diseases, which can equate to more ER visits [@chang2006ozone]. Ground level ozone is caused by a reaction between volatile organic compounds (VOCs), nitrogen oxides (NOx), and heat. The main cause of NOx is vehicle emissions [@lowi1990method]. Fort Collins has implemented a number of policies throughout the years aimed at reducing vehicle emissions, mainly by adding protections for alternative transportation (walking, biking, public transport, etc.). 
 
@@ -25,7 +25,7 @@ established air quality monitoring stations over a defined time period, both bef
 
 Expected outcomes: The policy that reduced vehicle emissions the most was the most successful at reducing ozone levels
 
-Proposal #2: Correlation between ozone pollution and elevation in Fort Collins
+*Proposal #2:* Correlation between ozone pollution and elevation in Fort Collins
 
 Justification: Fort Collins has among the worst ozone levels in the country. High ozone levels are associated with increased asthma rates and respiratory diseases, which can equate to more ER visits. Ground level ozone is caused by a reaction between volatile organic compounds (VOCs), nitrogen oxides (NOx), and heat [@brodin2010seasonal]. Since heat (temperature) is directly related to elevation [@aneja1992characterization], I want to determine how much of a correlation there is between change in elevation and ground-level ozone levels.
 
@@ -38,14 +38,22 @@ ozone levels while accounting for other environmental variables. Geographic Info
 Expected outcomes: Since temperatures are lower at higher elevations, there is a negative correlation between change in elevation and ozone levels.
 
 ## Miranda Chin's Proposals
-Proposal #1: Population trends of invasive aquatic species populations within Colorado
-Justification: Aquatic invasive species, such as the Red Shiner and Common Carp, act as a threat to the health and population size of native species [@stone2018aquatic]. As invasive species consume resources and take up niches, it can also result in widespread ecosystem changes as species are outcompeted; invasive species can also affect human processes as well, such as economic or cultural spheres [@rahel2008managing]. Even though invasive species have existed in Colorado for hundreds of years, due to increases in climate change they have become more prevalent than ever. Climate change results in narrowing possible habitats for native species, as can be seen in the temperature increases in rivers and lakes that create uninhabitable areas for wildlife [@rahel2008managing0. However, these issues of resource management are exacerbated by competition with invasive species as these species are often better equipped to survive in these habitats than native species; this may result in extinction or further migration for many species [@stone2018aquatic]. Keeping track of invasive species populations is critical to making managment plans and addressing the changing landscape in Colorado.
-Research objective: The objective is to track the population and growth of the Common Carp species in Colorado over the past decade in order to determine the rate at which the species is increasing. 
-Proposed methods: 
-Expected outcomes: 
+*Proposal #1:* Population trends of invasive aquatic species populations within Colorado
 
-Proposal #2: Relationship between economic status and social vulnerability in families in the US
-Justification: 
-Research objective:
+Justification: Aquatic invasive species, such as the Red Shiner and Common Carp, act as a threat to the health and population size of native species [@stone2018aquatic]. As invasive species consume resources and take up niches, it can also result in widespread ecosystem changes as species are outcompeted; invasive species can also affect human processes as well, such as economic or cultural spheres [@rahel2008managing]. Even though invasive species have existed in Colorado for hundreds of years, due to increases in climate change they have become more prevalent than ever. Climate change results in narrowing possible habitats for native species, as can be seen in the temperature increases in rivers and lakes that create uninhabitable areas for wildlife [@rahel2008managing0]. However, these issues of resource management are exacerbated by competition with invasive species as these species are often better equipped to survive in these habitats than native species; this may result in extinction or further migration for many species [@stone2018aquatic]. Keeping track of invasive species populations is critical to making managment plans and addressing the changing landscape in Colorado.
+
+Research objective: The objective is to track the population and growth of the Common Carp species in Colorado over the past decade in order to determine the rate at which the species is increasing. 
+
 Proposed methods: 
+
+Expected outcomes: I expect to find that the common carp has been increasing in population over the years, or expanding the areas in which they inhabitat in Colorado.
+
+*Proposal #2:* Relationship between economic status and social vulnerability in families in the US
+
+Justification: 
+
+Research objective:
+
+Proposed methods: 
+
 Expected outcomes: 
