--- a/references.bib
+++ b/references.bib
@@ -75,3 +75,25 @@
   year={1992},
   publisher={Wiley Online Library}
 }
+
+@article{li2023mapping,
+  title={Mapping social vulnerability indicators to understand the health impacts of climate change: a scoping review},
+  author={Li, Ang and Toll, Mathew and Bentley, Rebecca},
+  journal={The Lancet Planetary Health},
+  volume={7},
+  number={11},
+  pages={e925--e937},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{cutter2003social,
+  title={Social vulnerability to environmental hazards},
+  author={Cutter, Susan L and Boruff, Bryan J and Shirley, W Lynn},
+  journal={Social science quarterly},
+  volume={84},
+  number={2},
+  pages={242--261},
+  year={2003},
+  publisher={Wiley Online Library}
+}
