--- a/index.qmd
+++ b/index.qmd
@@ -40,7 +40,7 @@ Expected outcomes: Since temperatures are lower at higher elevations, there is a
 ## Miranda Chin's Proposals
 *Proposal #1:* Population trends of invasive aquatic species populations within Colorado
 
-Justification: Aquatic invasive species, such as the Red Shiner and Common Carp, act as a threat to the health and population size of native species [@stone2018aquatic]. As invasive species consume resources and take up niches, it can also result in widespread ecosystem changes as species are outcompeted; invasive species can also affect human processes as well, such as economic or cultural spheres [@rahel2008managing]. Even though invasive species have existed in Colorado for hundreds of years, due to increases in climate change they have become more prevalent than ever. Climate change results in narrowing possible habitats for native species, as can be seen in the temperature increases in rivers and lakes that create uninhabitable areas for wildlife [@rahel2008managing0]. However, these issues of resource management are exacerbated by competition with invasive species as these species are often better equipped to survive in these habitats than native species; this may result in extinction or further migration for many species [@stone2018aquatic]. Keeping track of invasive species populations is critical to making managment plans and addressing the changing landscape in Colorado.
+Justification: Aquatic invasive species, such as the Red Shiner and Common Carp, act as a threat to the health and population size of native species [@stone2018aquatic]. As invasive species consume resources and take up niches, it can also result in widespread ecosystem changes as species are outcompeted; invasive species can also affect human processes as well, such as economic or cultural spheres [@rahel2008managing]. Even though invasive species have existed in Colorado for hundreds of years, due to increases in climate change they have become more prevalent than ever. Climate change results in narrowing possible habitats for native species, as can be seen in the temperature increases in rivers and lakes that create uninhabitable areas for wildlife [@rahel2008managing]. However, these issues of resource management are exacerbated by competition with invasive species as these species are often better equipped to survive in these habitats than native species; this may result in extinction or further migration for many species [@stone2018aquatic]. Keeping track of invasive species populations is critical to making managment plans and addressing the changing landscape in Colorado.
 
 Research objective: The objective is to track the population and growth of the Common Carp species in Colorado over the past decade in order to determine the rate at which the species is increasing. 
 
